# Robust-Text-Detection

./: CMakeLists.txt  README.md
include/: RobustTextDetection.h
src/: ConnectedComponent.cpp  RobustTextDetection.cpp  main.cpp
